kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-app
  namespace: devops-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app

    spec:
      containers:
        - name: demo-app
          image: nginx:1.27-alpine

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10
