kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-app
  namespace: devops-demo

spec:
  selector:
    app: demo-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
