kubernetes/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: demo-app-policy
  namespace: devops-demo

spec:
  podSelector:
    matchLabels:
      app: demo-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: allowed

      ports:
        - protocol: TCP
          port: 80
